--- a/elestio.yml
+++ b/elestio.yml
@@ -39,5 +39,5 @@ lifeCycleConfig:
 webUI:
   - url: "https://[CI_CD_DOMAIN]/admin"
     label: "DocuSeal Admin"
-    login: "root"
+    login: "[ADMIN_EMAIL]"
     password: "[ADMIN_PASSWORD]"
