--- a/elestio.yml
+++ b/elestio.yml
@@ -37,7 +37,7 @@ lifeCycleConfig:
   postRestoreCommand: "./scripts/postRestore.sh"
   postDeployCommand: "./scripts/postDeploy.sh"
 webUI:
-  - url: "https://[CI_CD_DOMAIN]/admin"
+  - url: "https://[CI_CD_DOMAIN]"
     label: "DocuSeal Admin"
     login: "[ADMIN_EMAIL]"
     password: "[ADMIN_PASSWORD]"
