--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     depends_on:
       - postgres
     image: elestio4test/docuseal:${SOFTWARE_VERSION_TAG}
+    restart: always
     ports:
       - 172.17.0.1:5967:3000
     volumes:
